added another UH image

--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
                 <img src="images/uh_central_plant_and_tunnels/underground_control_room.jpeg" alt="Underground control room associated with UH infrastructure">
                 <img src="images/uh_central_plant_and_tunnels/vault_door.jpeg" alt="Heavy vault door within the UH tunnel system">
                 <img src="images/uh_central_plant_and_tunnels/vertical_pipes.jpeg" alt="Vertical pipes running inside a UH tunnel">
+                <img src="images/uh_central_plant_and_tunnels/underground.png" alt="UH logo and Facilities">
             </div>
 
             <h3 id="uh-proposal">Proposed UH Microgrid</h3>
