Favicon and grid image

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>UH Microgrid Feasibility Study</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Add Favicon -->
+    <link rel="icon" type="image/png" href="images/website_favicon.png">
 </head>
 <body>
     <div class="overlay" id="overlay"></div>
@@ -55,6 +57,10 @@
             <p>
                 The defining feature is its ability to intentionally "island" itself from the macrogrid during outages or disturbances, using its own local energy resources to power its designated loads. This capability is managed by a sophisticated microgrid controller.
             </p>
+            <!-- Added image -->
+            <div class="image-container" style="text-align: center; margin: 1.5rem 0;"> <!-- Centered container -->
+                <img src="images/microgrid-system.png" alt="Diagram illustrating the components of a microgrid including generation, storage, loads, and grid connection" style="max-width: 80%; height: auto; border: 1px solid #ccc;">
+            </div>
 
             <h2 id="why-important">Why are Microgrids Important?</h2>
             <p>
