Footer and image
Added github link to the footer and an image

--- a/index.html
+++ b/index.html
@@ -325,6 +325,9 @@
             </p>
         </section>
 
+<div class="image-container" style="text-align: center; margin: 1.5rem 0;">
+                <img src="images/us-microgrid-market.png" alt="US Microgrid Market Growth Projection" style="max-width: 80%; height: auto; border: 1px solid #ccc;">
+            </div>
         <section id="resources">
             <h2>Resources & Further Reading</h2>
             <p>Explore these links for more detailed information:</p>
@@ -345,7 +348,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 University of Houston Microgrid Feasibility Study. All rights reserved.</p>
+        <p>&copy; See how to recreate this open source project at https://github.com/stragitech/uh_microgrid_feasibility</p>
     </footer>
 
     <script src="script.js"></script>
