Updated footer link description

--- a/index.html
+++ b/index.html
@@ -348,7 +348,11 @@
     </main>
 
     <footer>
-        <p>&copy; See how to recreate this open source project at https://github.com/stragitech/uh_microgrid_feasibility</p>
+        <p></p>
+        <!-- Add GitHub link -->
+        <p>
+            <a href="https://github.com/stragitech/uh_microgrid_feasibility" target="_blank" rel="noopener noreferrer" style="color: #FFF9D9; text-decoration: underline;">Recreate this opensource project</a>
+        </p>
     </footer>
 
     <script src="script.js"></script>
