Added poster to readme

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             </div> <!-- /.case-studies-container -->
         </section>
 
-        <section id="global-map" style="margin: auto 4rem;">
+        <section id="global-map" style="margin: auto 0.5rem;">
             <h2>Global Microgrid Examples</h2>
             <p>Microgrids are being deployed worldwide in diverse applications. This map showcases examples ranging from remote community power systems to industrial facilities, military bases, and university campuses, illustrating the global trend towards localized, resilient energy solutions.</p>
             <div class="map-container">
@@ -196,7 +196,27 @@
             </div>
         </section>
 
-        <section id="uh-map" style="margin: auto 4rem;">
+        <!-- Added University Initiatives Section -->
+        <section id="texas-initiatives">
+            <h2>University Initiatives in Texas</h2>
+            <p>Several universities in Texas are actively exploring or implementing advanced energy solutions, including microgrids and large-scale renewable projects.</p>
+            <div class="image-gallery" style="display: flex; flex-wrap: wrap; justify-content: space-around; gap: 1rem; margin-top: 1.5rem;">
+                <div class="image-container" style="text-align: center; flex-basis: 30%; min-width: 250px;">
+                    <img src="images/UT1.png" alt="UT Austin campus energy infrastructure diagram" style="max-width: 100%; height: auto; border: 1px solid #ccc;">
+                    <p style="font-size: 0.9em; color: #555; margin-top: 0.5rem;">UT Austin's established combined heat and power system.</p>
+                </div>
+                <div class="image-container" style="text-align: center; flex-basis: 30%; min-width: 250px;">
+                    <img src="images/UT2.png" alt="UT Austin renewable energy integration graphic" style="max-width: 100%; height: auto; border: 1px solid #ccc;">
+                    <p style="font-size: 0.9em; color: #555; margin-top: 0.5rem;">UT Austin's focus on integrating renewables and efficiency.</p>
+                </div>
+                <div class="image-container" style="text-align: center; flex-basis: 30%; min-width: 250px;">
+                    <img src="images/AnM.png" alt="Texas A&M RELLIS campus microgrid project overview" style="max-width: 100%; height: auto; border: 1px solid #ccc;">
+                    <p style="font-size: 0.9em; color: #555; margin-top: 0.5rem;">Texas A&M's RELLIS campus microgrid initiative.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="uh-map" style="margin: auto 0.5rem;">
             <h2>UH Campus Microgrid Overview</h2>
             <p>This map provides a geographical overview of the University of Houston campus, highlighting key buildings and infrastructure relevant to its energy system. Explore the potential locations for components of a future campus microgrid.</p>
             <div class="map-container">
