Added clickable poster

--- a/index.html
+++ b/index.html
@@ -311,9 +311,25 @@
             </p>
         </section>
 
-<div class="image-container" style="text-align: center; margin: 1.5rem 0;">
+        <div class="image-container" style="text-align: center; margin: 1.5rem 0;">
                 <img src="images/us-microgrid-market.png" alt="US Microgrid Market Growth Projection" style="max-width: 80%; height: auto; border: 1px solid #ccc;">
             </div>
+        <!-- Inserted Project Poster Image -->
+        <div class="image-container" style="text-align: center; margin: 2rem 0;">
+            <a href="https://github.com/stragitech/uh_microgrid_feasibility" target="_blank" rel="noopener noreferrer" title="Get Involved!">
+                <img src="images/poster.png" 
+                     alt="Project Poster summarizing the UH Microgrid Feasibility Study" 
+                     style="
+                        max-width: 20%; /* Significantly reduced size - adjust as needed */ 
+                        height: auto; 
+                        border: 1px solid #ccc; 
+                        display: block; /* Prevents extra space below image inside link */
+                        margin-left: auto; /* Centers the image block within the centered container */
+                        margin-right: auto;
+                        cursor: pointer; /* Ensures pointer cursor on image hover */
+                     ">
+            </a>
+        </div>
         <section id="resources">
             <h2>Resources & Further Reading</h2>
             <p>Explore these links for more detailed information:</p>
@@ -337,7 +353,7 @@
         <p></p>
         <!-- Add GitHub link -->
         <p>
-            <a href="https://github.com/stragitech/uh_microgrid_feasibility" target="_blank" rel="noopener noreferrer" style="color: #FFF9D9; text-decoration: underline;">Recreate this opensource project</a>
+            <a href="https://github.com/stragitech/uh_microgrid_feasibility" target="_blank" rel="noopener noreferrer" style="color: #FFF9D9; text-decoration: underline;">LEARN MORE ABOUT THIS OPEN SOURCE PROJECT!            </a>
         </p>
     </footer>
 
