--- a/index.html
+++ b/index.html
@@ -201,19 +201,27 @@
             <h2>University Initiatives in Texas</h2>
             <p>Several universities in Texas are actively exploring or implementing advanced energy solutions, including microgrids and large-scale renewable projects.</p>
             <div class="image-gallery" style="display: flex; flex-wrap: wrap; justify-content: space-around; gap: 1rem; margin-top: 1.5rem;">
+                
                 <div class="image-container" style="text-align: center; flex-basis: 30%; min-width: 250px;">
                     <img src="images/UT1.png" alt="UT Austin campus energy infrastructure diagram" style="max-width: 100%; height: auto; border: 1px solid #ccc;">
                     <p style="font-size: 0.9em; color: #555; margin-top: 0.5rem;">UT Austin's established combined heat and power system.</p>
                 </div>
+
                 <div class="image-container" style="text-align: center; flex-basis: 30%; min-width: 250px;">
                     <img src="images/UT2.png" alt="UT Austin renewable energy integration graphic" style="max-width: 100%; height: auto; border: 1px solid #ccc;">
                     <p style="font-size: 0.9em; color: #555; margin-top: 0.5rem;">UT Austin's focus on integrating renewables and efficiency.</p>
                 </div>
+
                 <div class="image-container" style="text-align: center; flex-basis: 30%; min-width: 250px;">
                     <img src="images/AnM.png" alt="Texas A&M RELLIS campus microgrid project overview" style="max-width: 100%; height: auto; border: 1px solid #ccc;">
                     <p style="font-size: 0.9em; color: #555; margin-top: 0.5rem;">Texas A&M's RELLIS campus microgrid initiative.</p>
                 </div>
-            </div>
+
+                <div class="image-container" style="text-align: center; flex-basis: 30%; min-width: 250px;">
+                    <img src="images/AnM_grid.png" alt="Texas A&M grid infrastructure diagram" style="max-width: 100%; height: auto; border: 1px solid #ccc;">
+                    <p style="font-size: 0.9em; color: #555; margin-top: 0.5rem;">Details of Texas A&M's grid integration.</p> 
+                </div>
+                </div> 
         </section>
 
         <section id="uh-map" style="margin: auto 0.5rem;">
